# Visao

./: .dockerignore  .gitignore  Comandos.txt  Dockerfile  Makefile  README.md  Untitled  app.py  app_simple.py  pyproject.toml  requirements.txt  wpp.py
old/: requirements.txt
