[project]
name = "planeta-wpp"
version = "0.1.0"
description = "WhatsApp Automation System"
requires-python = ">=3.11"
dependencies = [
    "flask==3.0.0",
    "uvicorn[standard]==0.24.0",
    "python-multipart==0.0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
index-url = "https://pypi.org/simple"
